@@ -79,13 +79,10 @@ struct h2_task {
     
     struct h2_mplx *mplx;
     
-    unsigned int filters_set    : 1;
-    unsigned int worker_started : 1; /* h2_worker started processing */
-    unsigned int redo : 1;           /* was throttled, should be restarted later */
-    
+    unsigned int filters_set;
+    unsigned int worker_started;     /* h2_worker started processing */
     int worker_done;                 /* h2_worker finished */
-    int done_done;                   /* task_done has been handled */
-    
+
     apr_time_t started_at;           /* when processing started */
     apr_time_t done_at;              /* when processing was done */
     apr_bucket *eor;
@@ -101,8 +98,6 @@ void h2_task_destroy(h2_task *task);
 
 apr_status_t h2_task_do(h2_task *task, apr_thread_t *thread, int worker_id);
 
-void h2_task_redo(h2_task *task);
-int h2_task_can_redo(h2_task *task);
 int h2_task_has_started(h2_task *task);
 
 /**
